deployments/ml-demo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-ml
  labels: 
    app: demo-ml
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo-ml
  template:
    metadata:
      labels:
        app: demo-ml
    spec:
      containers:
      - name: demo-ml
        image: docker/getting-started:latest
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
