deployments/demo-service.yaml
#https://kubernetes.io/docs/concepts/services-networking/service/
apiVersion: v1
kind: Service
metadata:
  name: mongodb-service
spec:
  selector:
    app: nginx-service
  type: LoadBalancer
  ports:
  - name: nginx-service
    protocol: TCP
    port: 8080
    targetPort: 80
    nodePort: 30001
---
