deployments/ml-service.yaml
# https://kubernetes.io/docs/concepts/services-networking/service/
# apiVersion: v1
# kind: Service
# metadata:
#   name: nginx-service
#   namespace: default
# spec:
#   selector:
#     app: nginx-service
#   type: LoadBalancer
#   ports:
#   - name: nginx-service
#     protocol: TCP
#     port: 8080
#     targetPort: 80
#     nodePort: 30001

apiVersion: v1
kind: Service
metadata:
  labels:
    run: haproxy-ingress
  name: haproxy-ingress
  namespace: default
spec:
  selector:
    run: haproxy-ingress
  type: LoadBalancer
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
